[package]
name = "jmx"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jmx"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
pyth-client = "0.2.2"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
solana-program = "1.9.9"
serde = "1.0.136"
bincode = "1.3.3"